--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1,6 +1,6 @@
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowWidth=1910
-NewWindowHeight=998
+NewWindowWidth=2042
+NewWindowHeight=1460
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
@@ -71,7 +71,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1910,Y=998)
+LastSize=(X=2042,Y=1460)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-RT293EV
 LastExecutedLaunchName=DESKTOP-RT293EV
 LastExecutedPIEPreviewDevice=
@@ -113,32 +113,36 @@ OpenAssetsAtExit=/Game/Player/InventorySystem/WeaponSystem/WeaponComponent.Weapo
 OpenAssetsAtExit=/Game/Player/new/PLayer.PLayer
 OpenAssetsAtExit=/Game/Player/InventorySystem/WeaponSystem/Ammo/Ammo.Ammo
 OpenAssetsAtExit=/Game/Enemy/EnemyGoblin/gblbp.gblbp
-OpenAssetsAtExit=/Game/Enemy/EnemyGoblin/NewBlueprint.NewBlueprint
+OpenAssetsAtExit=/Game/Enemy/EnemyGoblin/AI_PhysicalMaterial.AI_PhysicalMaterial
+OpenAssetsAtExit=/Game/Player/InventorySystem/WeaponSystem/Ammo/爆炸.爆炸
+OpenAssetsAtExit=/Game/Player/InventorySystem/InventoryComponent.InventoryComponent
+OpenAssetsAtExit=/Game/Player/InventorySystem/ItemDataTable.ItemDataTable
+OpenAssetsAtExit=/Game/Player/InventorySystem/BP_ItemBase.BP_ItemBase
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Enemy/EnemyGoblin/gblbp
-MRUItem1=/Game/BPI/BPI_TakeDamage
-MRUItem2=/Game/Enemy/Zombie/Zombie_BP
-MRUItem3=/Game/Enemy/EnemyGoblin/NewBlueprint
-MRUItem4=/Game/MilitaryWeapSilver/Weapons/Animations/Fire_Rifle_W
-MRUItem5=/Game/Player/new/newAnim/newAnim_TPC_Base
-MRUItem6=/Game/AnimStarterPack/Reload_Rifle_Hip
-MRUItem7=/Game/Player/InventorySystem/WeaponSystem/Ammo/Shell_Case/Shell_Case
-MRUItem8=/Game/Player/InventorySystem/WeaponSystem/Ammo/Ammo
-MRUItem9=/Game/Player/new/PLayer
-MRUItem10=/Game/Player/InventorySystem/WeaponSystem/WeaponComponent
-MRUItem11=/Game/AnimStarterPack/Reload_Rifle_Ironsights
-MRUItem12=/Game/AK47/S_assault_rifle_02_reload_out_of_ammo
-MRUItem13=/Game/Player/new/newAnim/Montage/Fire_Shotgun_Ironsights_Montage
-MRUItem14=/Game/Player/new/newAnim/Montage/Fire_Rifle_Ironsights_Montage
-MRUItem15=/Game/Player/new/newAnim/Montage/Reload_Shotgun_Ironsights_Montage
-MRUItem16=/Game/MilitaryWeapSilver/Weapons/Animations/Reload_Shotgun_Ironsights_W
-MRUItem17=/Game/AK47/AM_TPC_Rifle_Reload_Out_Of_Ammo
-MRUItem18=/Game/MilitaryWeapSilver/Weapons/Animations/Reload_SniperRifle_Ironsights_W
-MRUItem19=/Game/MilitaryWeapSilver/Weapons/Animations/Prone_Reload_SniperRifle_W
+MRUItem0=/Game/MilitaryWeapSilver/Weapons/Animations/Reload_RocketLauncher_W
+MRUItem1=/Game/InfinityBladeEffects/Enemy/Enemy_Chicken/Meshes/S_Survival_CA_Chicken_02
+MRUItem2=/Game/Player/InventorySystem/ItemFunctionLibrary
+MRUItem3=/Game/Player/InventorySystem/BP_ItemBase
+MRUItem4=/Game/Player/InventorySystem/ItemDataTable
+MRUItem5=/Game/Player/InventorySystem/InventoryComponent
+MRUItem6=/Game/Player/InventorySystem/WeaponSystem/Ammo/爆炸
+MRUItem7=/Game/Enemy/EnemyGoblin/Materials/M_EnemyGoblin_01
+MRUItem8=/Game/BPI/BPI_TakeDamage
+MRUItem9=/Game/Enemy/EnemyGoblin/AI_PhysicalMaterial
+MRUItem10=/Game/Enemy/EnemyGoblin/NewBlueprint
+MRUItem11=/Game/Enemy/EnemyGoblin/gblbp
+MRUItem12=/Game/Player/InventorySystem/WeaponSystem/Ammo/Ammo
+MRUItem13=/Game/Player/new/PLayer
+MRUItem14=/Game/Player/InventorySystem/WeaponSystem/WeaponComponent
+MRUItem15=/Game/Enemy/Zombie/Zombie_BP
+MRUItem16=/Game/MilitaryWeapSilver/Weapons/Animations/Fire_Rifle_W
+MRUItem17=/Game/Player/new/newAnim/newAnim_TPC_Base
+MRUItem18=/Game/AnimStarterPack/Reload_Rifle_Hip
+MRUItem19=/Game/Player/InventorySystem/WeaponSystem/Ammo/Shell_Case/Shell_Case
 
 [DetailCategories]
 InventoryComponent_C.ComponentTick=True
@@ -1950,6 +1954,7 @@ ArrowComponent.Cooking=True
 ArrowComponent.Events=True
 EditorSkeletonNotifyObj.SkeletonNotifies=True
 Shell_Case_C.默认=True
+爆炸_C.默认=True
 
 [AssetEditorToolkitTabLocation]
 /Game/InventorySystem/InventoryComponent.InventoryComponent=0
@@ -2198,6 +2203,7 @@ Shell_Case_C.默认=True
 /Game/AnimStarterPack/Reload_Rifle_Hip.Reload_Rifle_Hip=1
 /Game/Player/InventorySystem/WeaponSystem/Ammo/Shell_Case/Shell_Case.Shell_Case=1
 /Game/MilitaryWeapSilver/Weapons/Animations/Fire_Rifle_W.Fire_Rifle_W=1
+/Game/MilitaryWeapSilver/Weapons/Animations/Reload_RocketLauncher_W.Reload_RocketLauncher_W=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2354,7 +2360,7 @@ AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settin
 AnimGraphNode_Base=
 K2Node=
 CapsuleComponent=
-ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" "
+ShapeComponent=
 AnimSequence=
 AnimSequenceBase=
 AnimationAsset=
@@ -2385,7 +2391,7 @@ AIController=
 Controller=
 AI3_Child_C=
 gbl_C=
-gblbp_C=
+gblbp_C="\"Object.Mesh\" "
 走向玩家_C=
 BTTask_BlueprintBase=
 BTTaskNode=
@@ -2395,7 +2401,7 @@ WidgetComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArra
 AI_HealthBar_C="\"Object.Render Transform.RenderTransform\" "
 Door_Actor_C="\"Object.Actor.Tags\" "
 phy_C="\"Object.sound\" \"Object.SurfaceType\" "
-PhysicalMaterial="\"Object.SurfaceType\" "
+PhysicalMaterial="\"Object.sound\" \"Object.SurfaceType\" "
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
@@ -2422,10 +2428,10 @@ BP_Weapon_C="\"Object.默认.WeaponInfo\" \"Object.默认.WeaponInfo.AmmoInfo_61
 EffectActor_C="\"Object.命中结果\" "
 发射物撞击后停止函数="\"Struct.Tep_命中结果\" "
 发射物撞击后停止函数_5="\"Struct.Tep_命中结果\" "
-WeaponComponent_C="\"Object.As PLayer\" "
+WeaponComponent_C=
 径向爆炸函数="\"Struct.Temp_命中结果\" "
 径向爆炸函数_6="\"Struct.Temp_命中结果\" "
-爆炸_C="\"Object.爆炸强度\" "
+爆炸_C=
 ConfrimUI_C="\"Object.ItemInfo\" "
 BP_ItemBase_C="\"Object.默认.WeaponInfo\" \"Object.默认.WeaponInfo.AmmoInfo_61_5BF6F92D47B5207E27B930A78FA5D323\" \"Object.默认.WeaponInfo.EffectInfo_67_213D03BC466141C42218569604B50C8A\" \"Object.默认.SoltItemInfo\" "
 StaticMeshActor=
@@ -2448,6 +2454,10 @@ UserConstructionScript="\"Struct.NewLocalVar_0\" "
 Shell_Case_C=
 换弹计算_16="\"Struct.所需弹药量\" "
 换弹计算="\"Struct.所需弹药量local\" "
+计算爆炸伤害="\"Struct.爆炸物落点Local\" "
+计算爆炸伤害_12="\"Struct.NewLocalVar_0\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.SphereElems.SphereElems[0]\" "
+StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.SphereElems.SphereElems[0]\" "
 
 [MessageLog]
 LastLogListing=PIE
@@ -2504,8 +2514,8 @@ CameraSpeed=3
 RotGridEnabled=False
 
 [RootWindow]
-ScreenPosition=X=293.000 Y=113.000
-WindowSize=X=1323.000 Y=795.000
+ScreenPosition=X=292.889 Y=112.889
+WindowSize=X=1275.556 Y=747.556
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2533,7 +2543,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Enemy/EnemyGoblin
+ContentBrowserTab1.SelectedPaths=/Game/MilitaryWeapSilver/Weapons
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2541,7 +2551,7 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
-ContentBrowserTab1.ThumbnailSizeScale=0.204545
+ContentBrowserTab1.ThumbnailSizeScale=0.104545
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.500000
 AssetPropertyPicker.CurrentViewType=0
@@ -2573,7 +2583,7 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [Directories2]
-UNR=C:/Users/DELL/Documents/GitHub/UE4/Content/Map
+UNR=../../../../Ue4 Projects/p1/Content/Map
 BRUSH=C:/Users/DELL/Documents/GitHub/UE4/Content/
 FBX=C:/Users/DELL/Documents/GitHub/UE4/Content/
 FBXAnim=C:/Users/DELL/Documents/GitHub/UE4/Content/
@@ -3561,7 +3571,7 @@ AI3_Child_C=
 gbl_C=
 BoxComponent=BoxComponent.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
-gblbp_C=
+gblbp_C=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PLayer_C.Rendering.LOD,PostProcessVolume.Lens.Lens,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.fire,StaticMeshActor.Collision.Collision,
 MulticastInlineDelegatePropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,PLayer_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PostProcessVolume.Lens.Lens,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.fire,StaticMeshActor.Collision.Collision,
 走向玩家_C=
 ProgressBar=
@@ -3673,7 +3683,7 @@ WeaponComponent_C=
 径向爆炸函数=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 径向爆炸函数_6=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 RadialForceComponent=
-爆炸_C=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,PLayer_C.Rendering.LOD,
+爆炸_C=
 UserDefinedStruct=
 K2Node_SetFieldsInStruct=K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
 ConfrimUI_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,
@@ -3701,6 +3711,8 @@ UserConstructionScript_3=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMe
 Shell_Case_C=
 换弹计算_16=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PLayer_C.Rendering.LOD,PostProcessVolume.Lens.Lens,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.fire,StaticMeshActor.Collision.Collision,
 换弹计算=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PLayer_C.Rendering.LOD,PostProcessVolume.Lens.Lens,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.fire,StaticMeshActor.Collision.Collision,
+计算爆炸伤害=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PLayer_C.Rendering.LOD,PostProcessVolume.Lens.Lens,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.fire,StaticMeshActor.Collision.Collision,
+计算爆炸伤害_12=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PLayer_C.Rendering.LOD,PostProcessVolume.Lens.Lens,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.fire,StaticMeshActor.Collision.Collision,
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -3770,7 +3782,6 @@ ChangeVariableType_Warning=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [MaterialInstanceEditor]
 bShowGrid=True
