--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1,6 +1,6 @@
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowWidth=1910
-NewWindowHeight=998
+NewWindowWidth=2870
+NewWindowHeight=1658
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
@@ -71,7 +71,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1910,Y=998)
+LastSize=(X=2870,Y=1658)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-RT293EV
 LastExecutedLaunchName=DESKTOP-RT293EV
 LastExecutedPIEPreviewDevice=
@@ -110,36 +110,31 @@ LastLevel=/Game/Map/NewMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Player/new/newAnim/newAnim_TPC_Base.newAnim_TPC_Base
-OpenAssetsAtExit=/Game/Player/new/PLayer.PLayer
-OpenAssetsAtExit=/Game/Sword_Animations/Demo/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin
-OpenAssetsAtExit=/Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_02_Seq_Montage.Combo_Attack_02_02_Seq_Montage
-OpenAssetsAtExit=/Game/Player/InventorySystem/BP_ItemBase.BP_ItemBase
-OpenAssetsAtExit=/Game/Player/InventorySystem/WeaponSystem/WeaponComponent.WeaponComponent
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_02_Seq_Montage
-MRUItem1=/Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_01_Seq_Montage
-MRUItem2=/Game/Player/InventorySystem/WeaponSystem/WeaponComponent
-MRUItem3=/Game/Player/InventorySystem/BP_ItemBase
-MRUItem4=/Game/Sword_Animations/Demo/Mannequin/Character/Mesh/SK_Mannequin
-MRUItem5=/Game/Player/new/PLayer
-MRUItem6=/Game/Player/new/newAnim/newAnim_TPC_Base
-MRUItem7=/Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_02_Seq
-MRUItem8=/Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_All_Seq
-MRUItem9=/Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_01_Seq
-MRUItem10=/Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_01_Seq_Composite
-MRUItem11=/Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_04_Seq
-MRUItem12=/Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_03_Seq
-MRUItem13=/Game/Sword_Animations/Animations/Sequence/01_Idle/Idle_Combat_Seq
-MRUItem14=/Game/Sword_Animations/Animations/Sequence/01_Idle/Idle_Combat_To_Idle_Seq
-MRUItem15=/Game/Sword_Animations/Animations/Sequence/01_Idle/Idle_To_Idle_Combat_Seq
-MRUItem16=/Game/Sword_Animations/Animations/Sequence/01_Idle/Idle_Seq
-MRUItem17=/Game/Player/InventorySystem/InventoryComponent
-MRUItem18=/Game/Player/InventorySystem/ItemFunctionLibrary
-MRUItem19=/Game/Player/InventorySystem/WeaponSystem/BP_Weapon
+MRUItem0=/Game/Sword_Animations/Animations/Sequence/03_Walk/02_Walk_Combat/01_Walk_Combat_F_0/Walk_Combat_Start_F_0_Seq
+MRUItem1=/Game/Player/new/newAnim/BlendSpace/combat_start
+MRUItem2=/Game/Player/new/newAnim/BlendSpace/combat_stop
+MRUItem3=/Game/Player/new/newAnim/newAnim_TPC_Base
+MRUItem4=/Game/Sword_Animations/Demo/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
+MRUItem5=/Game/Player/new/newAnim/BlendSpace/walk
+MRUItem6=/Game/Sword_Animations/Animations/Sequence/04_Run/02_Run_Combat/01_Run_Combat_F_0/Run_Combat_Stop_F_0_Seq
+MRUItem7=/Game/Player/new/newAnim/BlendSpace/combat_loop
+MRUItem8=/Game/Player/new/newAnim/BlendSpace/NewBlendSpace
+MRUItem9=/Game/Player/new/newAnim/BlendSpace/NewBlendSpace1
+MRUItem10=/Game/Player/new/newAnim/BlendSpace/NewBlendSpace1D
+MRUItem11=/Game/Sword_Animations/Animations/Sequence/03_Walk/02_Walk_Combat/01_Walk_Combat_F_0/Walk_Combat_Stop_F_0_Seq
+MRUItem12=/Game/Player/new/newAnim/AimOffset/NewAimOffsetBlendSpace
+MRUItem13=/Game/Player/new/newAnim/AimOffset/NewAimOffsetBlendSpace1D
+MRUItem14=/Game/Player/new/newAnim/AnimSequence/Idle_Rifle_Ironsights
+MRUItem15=/Game/Player/new/newAnim/BlendSpace/holdgun
+MRUItem16=/Game/Sword_Animations/Animations/Sequence/03_Walk/02_Walk_Combat/01_Walk_Combat_F_0/Walk_Combat_Loop_F_0_Seq0
+MRUItem17=/Game/Sword_Animations/Animations/Sequence/03_Walk/03_Walk_Block/01_Walk_Block_F_0/Walk_Block_Loop_F_0_Seq
+MRUItem18=/Game/Sword_Animations/Animations/Sequence/01_Idle/Idle_Combat_Seq
+MRUItem19=/Game/Player/InventorySystem/WeaponSystem/WeaponComponent
 
 [DetailCategories]
 InventoryComponent_C.ComponentTick=True
@@ -2084,6 +2079,20 @@ AnimComposite.AdditiveSettings=True
 AnimComposite.Length=True
 AnimComposite.MetaData=True
 AnimComposite.Thumbnail=True
+BlendSpace1D.InputInterpolation=True
+BlendSpace1D.Axis Settings=True
+BlendSpace1D.AdditiveSettings=True
+BlendSpace1D.Animation=True
+BlendSpace1D.SampleInterpolation=True
+BlendSpace1D.AnimationNotifies=True
+BlendSpace1D.MetaData=True
+BlendSpace1D.Thumbnail=True
+BlendSpace1D.BlendSamples=True
+AnimGraphNode_AimOffsetLookAt.Performance=True
+AnimGraphNode_AimOffsetLookAt.LookAt=True
+AnimGraphNode_AimOffsetLookAt.Coordinates=True
+AnimGraphNode_AimOffsetLookAt.Settings=True
+AnimGraphNode_AimOffsetLookAt.Relevancy=True
 
 [AssetEditorToolkitTabLocation]
 /Game/InventorySystem/InventoryComponent.InventoryComponent=0
@@ -2358,6 +2367,14 @@ AnimComposite.Thumbnail=True
 /Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_04_Seq.Combo_Attack_02_04_Seq=1
 /Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_All_Seq.Combo_Attack_02_All_Seq=1
 /Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_01_Seq_Composite.Combo_Attack_02_01_Seq_Composite=1
+/Game/Sword_Animations/Animations/Sequence/03_Walk/02_Walk_Combat/01_Walk_Combat_F_0/Walk_Combat_Stop_F_0_Seq.Walk_Combat_Stop_F_0_Seq=0
+/Game/Sword_Animations/Animations/Sequence/03_Walk/02_Walk_Combat/01_Walk_Combat_F_0/Walk_Combat_Loop_F_0_Seq0.Walk_Combat_Loop_F_0_Seq0=1
+/Game/Sword_Animations/Animations/Sequence/03_Walk/01_Walk/09_Walk_B_L_90/Walk_Stop_B_L_90_Seq.Walk_Stop_B_L_90_Seq=1
+/Game/Sword_Animations/Animations/Sequence/03_Walk/02_Walk_Combat/10_Walk_Combat_B_R_90/Walk_Combat_Loop_B_R_90_Seq.Walk_Combat_Loop_B_R_90_Seq=1
+/Game/Player/new/newAnim/AnimSequence/Idle_Rifle_Ironsights.Idle_Rifle_Ironsights=1
+/Game/Sword_Animations/Animations/Sequence/04_Run/02_Run_Combat/01_Run_Combat_F_0/Run_Combat_Stop_F_0_Seq.Run_Combat_Stop_F_0_Seq=1
+/Game/Player/new/newAnim/BlendSpace/combat_start.combat_start=1
+/Game/Sword_Animations/Animations/Sequence/03_Walk/02_Walk_Combat/01_Walk_Combat_F_0/Walk_Combat_Start_F_0_Seq.Walk_Combat_Start_F_0_Seq=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2499,7 +2516,7 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[5].KeyType\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[1]\" \"Object.AI Perception.SensesConfig.SensesConfig[1].Object.Sense\" "
-ActorComponent="\"Object.As PLayer\" "
+ActorComponent=
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
@@ -2523,7 +2540,7 @@ PLayer_C=
 Character=
 Pawn=
 Anim_TPC_Base_C=
-AnimInstance=
+AnimInstance="\"Object.is moving\" "
 DragDrop_C=
 DragDropOperation=
 InventoryComponent_C=
@@ -2572,7 +2589,7 @@ BTAuxiliaryNode=
 BTService_攻击范围_C="\"Object.is attack\" "
 攻击_C=
 Zombie_BP_C=
-newAnim_TPC_Base_C=
+newAnim_TPC_Base_C="\"Object.is moving\" "
 AnimGraphNode_SequencePlayer=
 AnimGraphNode_AssetPlayerBase=
 PickUpBase_C="\"Object.SoltItemInfo\" "
@@ -2583,7 +2600,7 @@ BP_Weapon_C="\"Object.默认.WeaponInfo\" \"Object.默认.WeaponInfo.AmmoInfo_61
 EffectActor_C="\"Object.命中结果\" "
 发射物撞击后停止函数="\"Struct.Tep_命中结果\" "
 发射物撞击后停止函数_5="\"Struct.Tep_命中结果\" "
-WeaponComponent_C="\"Object.As PLayer\" "
+WeaponComponent_C=
 径向爆炸函数="\"Struct.Temp_命中结果\" "
 径向爆炸函数_6="\"Struct.Temp_命中结果\" "
 爆炸_C="\"Object.爆炸强度\" "
@@ -2674,7 +2691,7 @@ RotGridEnabled=False
 
 [RootWindow]
 ScreenPosition=X=292.000 Y=112.000
-WindowSize=X=1275.000 Y=747.000
+WindowSize=X=1275.556 Y=747.556
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2702,7 +2719,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02
+ContentBrowserTab1.SelectedPaths=/Game/Sword_Animations/Animations/Sequence/03_Walk/02_Walk_Combat/01_Walk_Combat_F_0
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2710,7 +2727,7 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
-ContentBrowserTab1.ThumbnailSizeScale=0.254545
+ContentBrowserTab1.ThumbnailSizeScale=0.154545
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.500000
 AssetPropertyPicker.CurrentViewType=0
@@ -3696,7 +3713,7 @@ bShowGrid=True
 
 [DetailCustomWidgetExpansion]
 SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,
-BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
+BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,
 AimOffsetBlendSpace=AimOffsetBlendSpace.Axis Settings.Horizontal Axis,AimOffsetBlendSpace.Axis Settings.Vertical Axis,
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PLayer_C.Rendering.LOD,PostProcessVolume.Lens.Lens,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.fire,StaticMeshActor.Collision.Collision,gblbp_C.Collision.Collision,WidgetComponent.Collision.Collision,PLayer_C.Collision.Collision,Landscape.Collision.Collision,Ue4ASP_Character_C.Collision.Collision,MulticastInlineDelegatePropertyWrapper.DelegateInputs.InputArgument0,gblbp_C.Physics.ConstraintsGroup,gblbp_C.Rendering.LOD,
 PLayer_C=
@@ -3750,7 +3767,7 @@ BTService_攻击范围_C=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMe
 gblbp_Child_C=CapsuleComponent.Collision.Collision,
 Zombie_BP_C=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PLayer_C.Rendering.LOD,PostProcessVolume.Lens.Lens,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.fire,StaticMeshActor.Collision.Collision,gblbp_C.Collision.Collision,PLayer_C.Collision.Collision,Landscape.Collision.Collision,Ue4ASP_Character_C.Collision.Collision,WidgetComponent.Collision.Collision,MulticastInlineDelegatePropertyWrapper.DelegateInputs.InputArgument0,gblbp_C.Physics.ConstraintsGroup,gblbp_C.Rendering.LOD,
 WidgetComponent=WidgetComponent.Collision.Collision,
-newAnim_TPC_Base_C=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PLayer_C.Rendering.LOD,PostProcessVolume.Lens.Lens,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.fire,StaticMeshActor.Collision.Collision,gblbp_C.Collision.Collision,WidgetComponent.Collision.Collision,PLayer_C.Collision.Collision,Landscape.Collision.Collision,Ue4ASP_Character_C.Collision.Collision,MulticastInlineDelegatePropertyWrapper.DelegateInputs.InputArgument0,gblbp_C.Physics.ConstraintsGroup,gblbp_C.Rendering.LOD,
+newAnim_TPC_Base_C=
 ProjectPackagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.fire,InputSettings.Bindings.ActionMappings.切换武器1,InputSettings.Bindings.ActionMappings.切换武器2,
 GameMapsSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.fire,InputSettings.Bindings.ActionMappings.切换武器1,InputSettings.Bindings.ActionMappings.切换武器2,
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.fire,InputSettings.Bindings.ActionMappings.切换武器1,InputSettings.Bindings.ActionMappings.切换武器2,
@@ -3876,6 +3893,7 @@ Shell_Case_C=
 Ue4ASP_Character_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.fire,K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PLayer_C.Rendering.LOD,StaticMeshActor.Collision.Collision,gblbp_C.Collision.Collision,Landscape.Collision.Collision,PLayer_C.Collision.Collision,Ue4ASP_Character_C.Collision.Collision,
 SpringArmComponent=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PLayer_C.Rendering.LOD,PostProcessVolume.Lens.Lens,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.fire,StaticMeshActor.Collision.Collision,gblbp_C.Collision.Collision,WidgetComponent.Collision.Collision,PLayer_C.Collision.Collision,Landscape.Collision.Collision,Ue4ASP_Character_C.Collision.Collision,
 SkinnedMeshComponent=
+BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 
 [PlacementMode]
 RecentlyPlaced=/Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_01_Seq_Composite.Combo_Attack_02_01_Seq_Composite;
