--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -112,32 +112,31 @@ CleanShutdown=False
 None=======
 OpenAssetsAtExit=/Game/Player/new/PLayer.PLayer
 OpenAssetsAtExit=/Game/Player/InventorySystem/WeaponSystem/WeaponComponent.WeaponComponent
-OpenAssetsAtExit=/Game/Sword_Animations/Demo/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_01_Seq_Montage
-MRUItem1=/Game/Player/new/newAnim/BlendSpace/combat_stop
-MRUItem2=/Game/Player/new/newAnim/BlendSpace/combat_start
-MRUItem3=/Game/Player/new/newAnim/BlendSpace/combat_loop
-MRUItem4=/Game/Sword_Animations/Demo/Mannequin/Character/Mesh/SK_Mannequin
-MRUItem5=/Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_04_Seq_Montage
-MRUItem6=/Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_03_Seq_Montage
-MRUItem7=/Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_02_Seq_Montage
-MRUItem8=/Game/Player/new/newAnim/newAnim_TPC_Base
-MRUItem9=/Game/GenericRadialMenus/Example/InventorySample/UMG_TestItem
-MRUItem10=/Game/GenericRadialMenus/UMG/UMG_RadialMenu
-MRUItem11=/Game/GenericRadialMenus/Example/InventorySample/UMG_TestInventoryMenu
-MRUItem12=/Game/Player/InventorySystem/ItemFunctionLibrary
-MRUItem13=/Game/Player/InventorySystem/S_BaseItemInfo
-MRUItem14=/Game/Player/InventorySystem/ItemDataTable
-MRUItem15=/Game/Player/InventorySystem/WeaponSystem/E_WeaponType
-MRUItem16=/Game/Player/InventorySystem/WeaponSystem/S_WeaponInfo
-MRUItem17=/Game/Player/InventorySystem/WeaponSystem/WeaponTable
-MRUItem18=/Game/UI/PlayerUI
-MRUItem19=/Game/Player/InventorySystem/WeaponSystem/WeaponComponent
+MRUItem0=/Game/InfinityBladeEffects/Enemy/Enemy_Chicken/Meshes/S_Survival_CA_Chicken_02
+MRUItem1=/Game/BP_Cut
+MRUItem2=/Game/Player/InventorySystem/WeaponSystem/WeaponComponent
+MRUItem3=/Game/Player/new/PLayer
+MRUItem4=/Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_01_Seq_Montage
+MRUItem5=/Game/Player/new/newAnim/BlendSpace/combat_stop
+MRUItem6=/Game/Player/new/newAnim/BlendSpace/combat_start
+MRUItem7=/Game/Player/new/newAnim/BlendSpace/combat_loop
+MRUItem8=/Game/Sword_Animations/Demo/Mannequin/Character/Mesh/SK_Mannequin
+MRUItem9=/Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_04_Seq_Montage
+MRUItem10=/Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_03_Seq_Montage
+MRUItem11=/Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_02_Seq_Montage
+MRUItem12=/Game/Player/new/newAnim/newAnim_TPC_Base
+MRUItem13=/Game/GenericRadialMenus/Example/InventorySample/UMG_TestItem
+MRUItem14=/Game/GenericRadialMenus/UMG/UMG_RadialMenu
+MRUItem15=/Game/GenericRadialMenus/Example/InventorySample/UMG_TestInventoryMenu
+MRUItem16=/Game/Player/InventorySystem/ItemFunctionLibrary
+MRUItem17=/Game/Player/InventorySystem/S_BaseItemInfo
+MRUItem18=/Game/Player/InventorySystem/ItemDataTable
+MRUItem19=/Game/Player/InventorySystem/WeaponSystem/E_WeaponType
 
 [DetailCategories]
 InventoryComponent_C.ComponentTick=True
@@ -2209,6 +2208,32 @@ AnimGraphNode_AimOffsetLookAt.Settings=True
 AnimGraphNode_AimOffsetLookAt.Relevancy=True
 WeaponComponent_C.环形菜单=True
 StaticMeshSocket.StaticMeshSocket=True
+BP_Cut_C.Tick=True
+BP_Cut_C.Replication=True
+BP_Cut_C.Rendering=True
+BP_Cut_C.Collision=True
+BP_Cut_C.Actor=True
+BP_Cut_C.Input=True
+ProceduralMeshComponent.Variable=True
+ProceduralMeshComponent.TransformCommon=True
+ProceduralMeshComponent.Sockets=True
+ProceduralMeshComponent.Procedural Mesh=True
+ProceduralMeshComponent.ComponentTick=True
+ProceduralMeshComponent.ProceduralMesh=True
+ProceduralMeshComponent.Physics=True
+ProceduralMeshComponent.Collision=True
+ProceduralMeshComponent.Lighting=True
+ProceduralMeshComponent.Navigation=True
+ProceduralMeshComponent.VirtualTexture=True
+ProceduralMeshComponent.Rendering=True
+ProceduralMeshComponent.Tags=True
+ProceduralMeshComponent.ComponentReplication=True
+ProceduralMeshComponent.Activation=True
+ProceduralMeshComponent.Cooking=True
+ProceduralMeshComponent.Events=True
+BP_Cut_C.TransformCommon=True
+ProceduralMeshComponent.Materials=True
+BP_Cut_C.默认=True
 
 [AssetEditorToolkitTabLocation]
 /Game/InventorySystem/InventoryComponent.InventoryComponent=0
@@ -2639,7 +2664,7 @@ ContentWidget="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.base item info\" "
 Visual="\"Object.base item info\" "
-Object="\"Object.SkeletalMeshes\" "
+Object=
 Overlay="\"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 PlayerUI_C="\"Object.As PLayer\" "
@@ -2667,8 +2692,8 @@ EdGraphNode=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 SkeletalMeshComponent="\"Object.SkeletalMesh\" "
 SkinnedMeshComponent="\"Object.SkeletalMesh\" "
-MeshComponent="\"Object.SkeletalMesh\" "
-PrimitiveComponent="\"Object.SkeletalMesh\" "
+MeshComponent=
+PrimitiveComponent=
 SceneComponent=
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[1]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[2]\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[1]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[2]\" "
@@ -2679,9 +2704,9 @@ ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray
 AnimSequence=
 AnimSequenceBase="\"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" "
 AnimationAsset="\"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" "
-PLayer_C="\"Object.Attack order\" "
-Character="\"Object.Attack order\" "
-Pawn="\"Object.Attack order\" "
+PLayer_C=
+Character=
+Pawn=
 Anim_TPC_Base_C=
 AnimInstance="\"Object.As PLayer\" "
 DragDrop_C=
@@ -2691,7 +2716,7 @@ AI_C=
 AI2_C=
 LandscapeEditorObject="\"Object.New Landscape.ImportLandscape_Layers.ImportLandscape_Layers[5]\" "
 Bullet_C=
-StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+StaticMeshComponent=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 NewMap_C=
@@ -2743,12 +2768,12 @@ BP_Weapon_C="\"Object.默认.WeaponInfo\" "
 EffectActor_C="\"Object.命中结果\" "
 发射物撞击后停止函数="\"Struct.Tep_命中结果\" "
 发射物撞击后停止函数_5="\"Struct.Tep_命中结果\" "
-WeaponComponent_C="\"Object.combo anim\" "
+WeaponComponent_C="\"Object.As PLayer\" "
 径向爆炸函数="\"Struct.Temp_命中结果\" "
 径向爆炸函数_6="\"Struct.Temp_命中结果\" "
 爆炸_C="\"Object.爆炸强度\" "
 ConfrimUI_C="\"Object.ItemInfo\" "
-BP_ItemBase_C="\"Object.默认.WeaponInfo\" "
+BP_ItemBase_C=
 StaticMeshActor=
 AnimationCheck=
 AnimationCheck_2="\"Struct.NewLocalVar_0\" "
@@ -2771,8 +2796,8 @@ Shell_Case_C=
 换弹计算="\"Struct.所需弹药量local\" "
 计算爆炸伤害="\"Struct.爆炸物落点Local\" "
 计算爆炸伤害_12="\"Struct.NewLocalVar_0\" "
-StaticMesh=
-StreamableRenderAsset=
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.SphereElems.SphereElems[0]\" "
+StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.SphereElems.SphereElems[0]\" "
 NewBlueprint_C=
 SpringArmComponent=
 HorizontalBox="\"Object.Render Transform.RenderTransform\" "
@@ -2793,6 +2818,7 @@ EditorNotifyObject="\"Object.Event.Event\" "
 EditorAnimBaseObj="\"Object.Event.Event\" "
 EditorAnimSegment="\"Object.Montage.AnimSegment\" "
 新函数_23="\"Struct.NewLocalVar_0\" "
+BP_Cut_C=
 
 [MessageLog]
 LastLogListing=PIE
@@ -4018,7 +4044,7 @@ PhysicalMaterial=
 K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 发射物撞击后停止函数=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PLayer_C.Rendering.LOD,PostProcessVolume.Lens.Lens,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.fire,StaticMeshActor.Collision.Collision,
 发射物撞击后停止函数_5=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
-WeaponComponent_C=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PLayer_C.Rendering.LOD,PostProcessVolume.Lens.Lens,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.fire,StaticMeshActor.Collision.Collision,gblbp_C.Collision.Collision,PLayer_C.Collision.Collision,Landscape.Collision.Collision,Ue4ASP_Character_C.Collision.Collision,WidgetComponent.Collision.Collision,MulticastInlineDelegatePropertyWrapper.DelegateInputs.InputArgument0,gblbp_C.Physics.ConstraintsGroup,gblbp_C.Rendering.LOD,BoxComponent.Collision.Collision,
+WeaponComponent_C=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PLayer_C.Rendering.LOD,PostProcessVolume.Lens.Lens,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.fire,StaticMeshActor.Collision.Collision,gblbp_C.Collision.Collision,WidgetComponent.Collision.Collision,PLayer_C.Collision.Collision,Landscape.Collision.Collision,Ue4ASP_Character_C.Collision.Collision,MulticastInlineDelegatePropertyWrapper.DelegateInputs.InputArgument0,gblbp_C.Physics.ConstraintsGroup,gblbp_C.Rendering.LOD,BoxComponent.Collision.Collision,
 径向爆炸函数=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 径向爆炸函数_6=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 RadialForceComponent=
@@ -4065,8 +4091,10 @@ UMG_TestItem_C=
 None=======
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 新函数_23=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PLayer_C.Rendering.LOD,PostProcessVolume.Lens.Lens,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.fire,StaticMeshActor.Collision.Collision,gblbp_C.Collision.Collision,PLayer_C.Collision.Collision,Landscape.Collision.Collision,Ue4ASP_Character_C.Collision.Collision,WidgetComponent.Collision.Collision,MulticastInlineDelegatePropertyWrapper.DelegateInputs.InputArgument0,gblbp_C.Physics.ConstraintsGroup,gblbp_C.Rendering.LOD,
+BP_Cut_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.fire,K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PLayer_C.Rendering.LOD,StaticMeshActor.Collision.Collision,gblbp_C.Collision.Collision,Landscape.Collision.Collision,PLayer_C.Collision.Collision,gblbp_C.Physics.ConstraintsGroup,gblbp_C.Rendering.LOD,WidgetComponent.Collision.Collision,Ue4ASP_Character_C.Collision.Collision,MulticastInlineDelegatePropertyWrapper.DelegateInputs.InputArgument0,
 
 [PlacementMode]
+RecentlyPlaced=/Game/BP_Cut.BP_Cut;
 RecentlyPlaced=/Game/Sword_Animations/Animations/Sequence/02_Attack/02_Combo_Attack_02/Combo_Attack_02_01_Seq_Composite.Combo_Attack_02_01_Seq_Composite;
 RecentlyPlaced=/Game/Player/InventorySystem/WeaponSystem/BP_Weapon.BP_Weapon;
 RecentlyPlaced=/Game/Player/InventorySystem/BP_ItemBase.BP_ItemBase;
@@ -4086,7 +4114,6 @@ RecentlyPlaced=/Game/Stylized_Forest/Meshes/stones/SM_small_stone_01.SM_small_st
 RecentlyPlaced=/Game/Player/InventorySystem/新建文件夹/PickUpBase_Child.PickUpBase_Child;
 RecentlyPlaced=/Game/Enemy/realAI/AI3.AI3;
 RecentlyPlaced=/Game/Enemy/AI.AI;
-RecentlyPlaced=/Game/Enemy/AI2.AI2;
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
