--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/NewMap.NewMap
+GameDefaultMap=/Game/Map/begin.Begin
 EditorStartupMap=/Game/Map/NewMap.NewMap
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
