--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,5 +6,5 @@ ProjectID=FEB1423941E9922DE3ED50B4FDC6B5FE
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Shipping
 StagingDirectory=(Path="C:/Users/19418/Desktop")
-BuildTarget=test
+BuildTarget=demo
 
